# littlejoys-persona-engine1

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  ARCHITECTURE.md  UAT_REPORT.md  pyproject.toml  render.yaml  requirements.txt  run_app.sh
.claude/: launch.json  settings.local.json
.streamlit/: config.toml  secrets.toml.example
app/: __init__.py  question_engine.py  streamlit_app.py
docs/: ARCHITECTURE.md  DEPLOY.md  DEPLOYMENT.md  DEVELOPMENT_PRACTICES.md  ENGINEER_PROFILES.md  LittleJoys_User_Flow_Document.docx  PERSONA_GENERATOR_MASTER.md  PRODUCT_ROADMAP.md  SIMULATION-DATAFLOW.json  SIMULATION-LOGIC-DEEP-DIVE.md  SIMULATION_LOGIC.md  SPRINT_19_21_PLAN.md  SPRINT_PLAN_OPTION_C.md  SYSTEM_OVERVIEW.md  generate_ppt.py  generate_pptx.js  generate_userflow_docx.js  generate_userflow_v21.js  persona_approach_gap_analysis.md  persona_generator_architecture.py  persona_generator_validity.md
reports/: LittleJoys_Simulatte_Research_Report.docx  Simulatte_LittleJoys_PitchDeck.pptx  build_pitch.js
scripts/: ab_test_baseline.py  analyse_journey_results.py  calibrate_event_params.py  ci.sh  fix_hard_violations.py  generate_journey_a_report.py  generate_journey_b_report.py  generate_journey_c_report.py  generate_persona_decision_report.py  generate_report.py  generate_reports.py  journey_comparison.py  patch_work_hours.py  precompute_results.py  regenerate_cohort.py  rerun_journey_c_errors.py  run_counterfactual_batch.py  run_dev.sh  run_intervention_batch.py  run_journey_a_analysis.py  run_journey_a_interventions.py  run_journey_batch.py  run_probes.py  (+9 more)
(+470 files in other folders)
